# Data-Security

./: LICENSE  README.md
Final/: DeepReflect.md  Inverting Gradients.md
lab1/: test.py  test1.py  实验1_管昀玫_2013750.docx
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  ckks_example.cpp  ckks_test.cpp  cmake_install.cmake  he  test.cpp  实验2_管昀玫_2013750.docx
lab3/: 2013750_管昀玫_零知识证明.docx  CMakeLists.txt  bank-prove.cpp  client-verify.cpp  common.hpp  myprove.cpp  mysetup.cpp  myverify.cpp  setup.cpp
lab4/: 2013750_管昀玫_秘密共享实践_.docx  d_1.txt  d_2.txt  d_3.txt  shamir.py  student_1_1.txt  student_1_2.txt  student_1_3.txt  student_2_1.txt  student_2_2.txt  student_2_3.txt  student_3_1.txt  student_3_2.txt  student_3_3.txt  vote.py
lab4/vote/: count_student.py  ss_function.py  ss_student.py  vote_counter.py
lab5/: 2013750_管昀玫_可加密搜索.docx  Forward.py  Inverted.py
lab6/: 2013750-管昀玫-频率隐藏OPE方案.docx  Node.cpp  Node.h  UDF.cpp  client.py  client_pro.py  load.sql
lab7/: csvpackage.c  laplace.c  testhist  testhist.c  testhist_log.txt  testhistgram.xlsx  testraw  testraw.c  testraw_log.txt  交互式发布DP方案评估.docx
